force-app/main/default/objects/Entrega_de_item__c/Entrega_de_item__c.object-meta.xml
<CustomObject>
    <label>Entrega de item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número da entrega de item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entregas de item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>