force-app/main/default/objects/Entrega_de_item__c/fields/Item_de_pedido_de_venda__c.field-meta.xml
<CustomField>
    <fullName>Item_de_pedido_de_venda__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item de pedido de venda</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Entregas de item</relationshipLabel>
    <relationshipName>Entregas_de_produto</relationshipName>
    <type>Lookup</type>
</CustomField>