force-app/main/default/objects/Entrega_de_item__c/fields/Quantidade_entregue__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_entregue__c</fullName>
    <label>Quantidade entregue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>